Better looking macro for locations

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -161,7 +161,7 @@
 \newcommand{\LTerm}{\mathcal{LT}} % (#1)% set of all linear terms over some set
 \newcommand{\LTermD}{\LTerm(\DVar)}
 \newcommand{\LTermXPD}{\LTerm(\Clock \cup \Param \cup \DVar)}
-\newcommand{\loc}{l} % location
+\newcommand{\loc}{\ell} % location
 \newcommand{\locinit}{\loc_\init}
 \newcommand{\Loc}{L} % set of locations
 \newcommand{\Param}{P} % set of parameters
