--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -21,6 +21,8 @@
 \usepackage{subcaption}
 % \usepackage{marginnote}
 
+\usepackage{longtable}
+
 % \usepackage[pdftex]{graphicx,color}
 \usepackage[pdftex,
 		colorlinks=true,
