--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -740,7 +740,7 @@ Patterns (see \cref{ss:mode:prop}) can also be used. % NOTE: not tested
 
 The command for accepting cycle synthesis is:
 
-\styleCommand{\binimitator{} model.imi -mode LoopSynth -output-result}
+\styleCommand{\binimitator{} model.imi -mode AccLoopSynth -output-result}
 
 
 
@@ -1486,7 +1486,7 @@ The mode for \imitator{}.
 	\styleOption{LoopSynth} & cycle synthesis \\
 	& (see \cref{ss:mode:LoopSynth}) \\
 
-	\styleOption{ActLoopSynth} & accepting cycle synthesis \\
+	\styleOption{AccLoopSynth} & accepting cycle synthesis \\
 	& (see \cref{ss:mode:LoopSynth}) \\
 
 	\styleOption{NZCUBcheck} & non-Zeno cycle synthesis (with CUB-detection) \\
