--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -9,7 +9,7 @@
 	SHORTbooktitle = {FSTTCS},
 	booktitle = {Proceedings of the 18th Conference on Foundations of Software Technology and Theoretical Computer Science ({FSTTCS} 1998)},
 	location  = {Chennai, India},
-	confdates = {December 17-19, 1998},
+	eventdate = {1998-12-17/1998-12-19},
 	year      = {1998},
 	pages     = {245-256},
 	doi        = {10.1007/b71635},
@@ -46,7 +46,7 @@
 	title     = {Model Checking via Reachability Testing for Timed Automata},
 	SHORTbooktitle = {{TACAS}},
 	booktitle = {Proceedings of the 4th International Conference on Tools and Algorithms for Construction and Analysis of Systems {TACAS} 1998)},
-	confdates = {March 28 - April 4, 1998},
+	eventdate = {1998-03-28/1998-04-04},
 	location  = {Lisbon, Portugal},
 	year      = {1998},
 	pages     = {263-280},
@@ -68,7 +68,7 @@
 	doi = {10.1007/978-3-030-17465-1_12},
 	editor = {Vojnar, Tomáš and Zhang, Lijun},
 	location = {Prague, Czech Repubic},
-	confdates = {8-11 April  2019},
+	eventdate = {2019-04-08/2019-04-11},
 	pages = {211--228},
 	publisher = {Springer},
 	series    = {\LNCS{}},
@@ -174,7 +174,7 @@
   	booktitle =	{Proceedings of the 18th International Symposium on Formal Methods ({FM} 2012)},
   	SHORTbooktitle =	{FM},
   	location  = {Paris, France},
-  	confdates = {August 27-31, 2012},
+  	eventdate = {2012-08-27/2012-08-31},
   	editor =	{Giannakopoulou, Dimitra and Méry, Dominique},
   	month =	aug,
 	pages =	 {33-36},
@@ -244,7 +244,7 @@
 	author = {Andr{\'e}, {\'E}tienne and Lime, Didier},
 	SHORTbooktitle =		{{ACSD}},
 	booktitle =		{Proceedings of the 17th International Conference on Application of Concurrency to System Design (ACSD 2017)},
-	confdates = {June 25-30, 2017},
+	eventdate = {2017-06-25/2017-06-30},
 	doi = {10.1109/ACSD.2017.19},
 	editor = {Alex Legay and Klaus Schneider},
 	location = {Zaragoza, Spain},
@@ -308,7 +308,7 @@
 	booktitle =		{Proceedings of the 16th International Conference on Formal Modeling and Analysis of Timed Systems ({FORMATS} 2018)},
 	SHORTbooktitle = {{FORMATS}},
 	doi = {10.1007/978-3-030-00151-3_3},
-	confdates = {September 4-6, 2018},
+	eventdate = {2018-09-04/2018-09-06},
 	editor = {Jansen, David N. and Prabhakar, Pavithra},
 	location = {Beijing, China},
 	pages = {1--17},
@@ -326,7 +326,7 @@
 	title = {Timed automata with parametric updates},
 	SHORTbooktitle = {{ACSD}},
 	booktitle = {Proceedings of the 18th International Conference on Application of Concurrency to System Design ({ACSD} 2018)},
-	confdates = {June 24-29, 2018},
+	eventdate = {2018-06-24/2018-06-29},
 	doi = {10.1109/ACSD.2018.000-2},
 	editor = {Juhás, Gabriel and Chatain, Thomas and Grosu, Radu},
 	location = {Bratislava, Slovakia},
@@ -338,7 +338,7 @@
 @inproceedings{AM02,
   	author =	{Adbedda{\"i}m, Yasmina and Maler, Oded},
   	booktitle =	{Proceedings of the 8th International Conference on Tools and Algorithms for Construction and Analysis of Systems ({TACAS} 2002)},
-  	confdates = {April 8-12, 2002},
+  	eventdate = {2002-04-08/2002-04-12},
   	location  = {Grenoble, France},
   	SHORTbooktitle =	{{TACAS}},
   	editor =	{Katoen, Joost-Pieter and Stevens, Perdita},
@@ -500,7 +500,7 @@
 	title     = {A User Guide to {HyTech}},
 	booktitle = {Proceedings of the First International Workshop on Tools and Algorithms for Construction and Analysis of Systems ({TACAS} 1995)},
 	SHORTbooktitle = {TACAS},
-	confdates = {May 19-20, 1995},
+	eventdate = {1995-05-19/1995-05-20},
 	location  = {Aarhus, Denmark},
 	pages     = {41-71},
 	doi       = {10.1007/3-540-60630-0_3},
@@ -566,7 +566,7 @@
 				Antoine Min{\'{e}}},
 	title     = {Apron: {A} Library of Numerical Abstract Domains for Static Analysis},
 	booktitle = {Proceedings of the 21st International Conference on Computer Aided Verification ({CAV} 2009)},
-	confdates = {June 26 - July 2, 2009},
+	eventdate = {2009-06-26/2009-07-02},
 	location  = {Grenoble, France},
 	series    = {\LNCS{}},
 	volume    = {5643},
@@ -642,7 +642,7 @@
 	SHORTbooktitle = {{CAV}},
 	booktitle = {Proceedings of the 21st International Conference on Computer Aided Verification ({CAV} 2009)},
 	location  = {Grenoble, France},
-	confdates = {June 26 - July 2, 2009},
+	eventdate = {2009-06-26/2009-07-02},
 	isbn      = {978-3-642-02657-7},
 	pages     = {709-714},
 	publisher = {Springer},
