--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -417,6 +417,21 @@
 	year = {2016},
 }
 
+
+@inproceedings{ANP17,
+	author = {Andr{\'e}, {\'E}tienne and Nguyen, Hoang Gia and Petrucci, Laure},
+	longbooktitle =		{Proceedings of the 22nd International Conference on Engineering of Complex Computer Systems (ICECCS 2017)},
+	booktitle =		{{ICECCS}},
+	doi = {10.1109/ICECCS.2017.28},
+	editor = {Hu, Zhenjiang and Bai, Guangdong},
+	location = {Fukuoka, Japan},
+	pages = {1--10},
+	publisher = {IEEE},
+	title = {Efficient parameter synthesis using optimized state exploration strategies},
+	year = {2017},
+	coreRank = {A},
+}
+
 @inproceedings{ANPS17,
 	author = {Andr{\'e}, {\'E}tienne and Nguyen, Hoang Gia and Petrucci, Laure and Sun, Jun},
 	booktitle =		{Proceedings of the 9th {NASA} Formal Methods Symposium ({NFM} 2017)},
@@ -431,6 +446,9 @@
 	volume    = {10227},
 	year = {2017},
 }
+
+
+
 
 
 @book{AS13,
@@ -632,6 +650,24 @@
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/NM-sies11.pdf},
   	year =	{2011},
 }
+
+
+@inproceedings{NPP18,
+  author = {Nguyen, Hoang Gia and Petrucci, Laure and Van de Pol, Jaco},
+	longbooktitle = {Proceedings of the 23rd International Conference on Engineering of Complex Computer Systems ({ICECCS} 2018)},
+	booktitle = {{ICECCS}},
+	editor = {Lin, Anthony Widjaja and Sun, Jun},
+	location = {Melbourne, Australia},
+	eventdate = {2018-12-12/2018-12-14},
+    editor = {Anthony Widjaja Lin and Jun Sun},
+	pages     = {1--9},
+	publisher = {{IEEE} Computer Society},
+	title = {Layered and Collecting {NDFS} with Subsumption for Parametric Timed Automata},
+	year = {2018},
+	month=dec,
+	doi       = {10.1109/ICECCS2018.2018.00009},
+}
+
 
 
 @inproceedings{SLDP09,
