--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -370,6 +370,8 @@ Discrete variables can be assigned to arithmetic expressions over~$\DVar$.
 On the one hand, this is more restrictive than clock updates, because discrete variables cannot be assigned to a clock or to a parameter.
 On the other hand, arithmetic expressions are richer than linear constraints, as they allow multiplication or division of variables with each other.
 
+Since version 2.12, \styleIMI{if}-\styleIMI{then}-\styleIMI{else} conditions are allowed in \emph{discrete} updates.
+
 \paragraph{Stopwatches}
 There are no distinction between clocks and stopwatches.
 That is, any clock can potentially be stopped in some location.
