Prepare next version 2.12

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -555,7 +555,7 @@
 @misc{imitator,
 	shorthand = {IMI-Web},
   	author =	{{IMITATOR}},
-  	note =	{\url{http://www.imitator.fr}},
+  	note =	{\url{https://www.imitator.fr}},
   	number =	{v2.11},
   	title =	{{\imitator{} Web page}},
   	url =	{https://www.imitator.fr},
