--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -67,7 +67,7 @@
 \fancyhead[r]{%
 	\includegraphics[height=1em]{../logos/imitator-500.png}
 	\includegraphics[height=1em]{../logos/logo2-300.png}
-	\includegraphics[height=1em]{../logos/logo2-11-300.png}
+	\includegraphics[height=1em]{../logos/logo2-12-300.png}
 }
 
 \renewcommand{\headrulewidth}{.1pt}
@@ -256,8 +256,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.11}
-\newcommand{\imitatorversionname}{Butter Kouign-amann}
+\newcommand{\imitatorversion}{2.12}
+\newcommand{\imitatorversionname}{Butter Lobster}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
