--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -36,9 +36,14 @@ The background erasing was done by Fabrice~Kordon.
 
 \url{https://pixabay.com/fr/m%C3%A9duse-tentacules-medusa-marine-154799/}
 
-\paragraph{\imitator{}'s 2.11 version logo} comes from ``Véritable Kouign Amann de Douarnenez '' by Haltopub on Wikimedia Commons
+\paragraph{\imitator{}'s 2.11 version logo} comes from ``Véritable Kouign Amann de Douarnenez'' by Haltopub on Wikimedia Commons
 	(License: public domain).
 
 \url{https://commons.wikimedia.org/wiki/File:Kouignamann.JPG}
  
+\paragraph{\imitator{}'s 2.12 version logo} comes from ``Photo of a live lobster'' by Junior Libby on PublicDomainPictures.net
+	(License: CC0 - public domain).
+
+\url{https://publicdomainpictures.net/en/view-image.php?image=39798&picture=lobster}
+
  
