Update manuals with logos

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -32,6 +32,9 @@
 		urlcolor=URLCOLOR,
 	]{hyperref}
 
+\usepackage{graphicx}
+\graphicspath{{./images/}{../logos/}}
+
 
 % BEGIN Watermarking
 \ifdefined\DraftVersion
