--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -3188,9 +3188,9 @@ Romain~Soulat implemented in part the merging technique~\cite{AFS13atva}, and br
 Giuseppe~Lipari and Sun~Youcheng provided examples from the real-time systems community, and collaborated on several algorithms.
 Camille~Coti, Sami~Evangelista and Nguy\~{ê}n~Hoàng~Gia worked on the distributed version of \imitator{}.
 Nguy\~{ê}n~Hoàng~Gia worked on the non-Zeno synthesis algorithms.
-Laure~Petrucci implemented an NDFS algorithm.
+Laure~Petrucci and Jaco van de Pol implemented an NDFS algorithm.
 %
-Stéphane Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
+Stéphan Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
 %
 Vincent~Bloemen implemented the optimal-time reachability synthesis.
 %
