--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2823,8 +2823,9 @@ The following people contributed to the development of \imitator{}.
 	Sami Evangelista & 2014 & & \\
 	Ulrich Kühne & 2010 & -- & 2011 \\
 	Nguy\~{ê}n~Hoàng~Gia & 2014 & -- & 2018 \\
-	Laure Petrucci & 2019 & & \\
+	Laure Petrucci & 2019 & -- & \\
 	Romain Soulat & 2010 & -- & 2013 \\
+	Jaco Van de Pol & 2019 & -- & \\
 \end{tabular}
 
 \bigskip
